WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225143
When IPC testing API is enabled, GPU process shouldn't kill Web Process
https://bugs.webkit.org/show_bug.cgi?id=225143
Summary
When IPC testing API is enabled, GPU process shouldn't kill Web Process
Ryosuke Niwa
Reported
2021-04-28 01:00:30 PDT
Like UI process, we should make GPU process not kill a Web process or die when it receives an invalid message from the Web process.
Attachments
Patch
(12.49 KB, patch)
2021-04-28 01:11 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Patch for landing
(12.48 KB, patch)
2021-04-28 12:06 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Patch for landing
(12.71 KB, patch)
2021-04-28 14:44 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Patch for landing
(12.40 KB, patch)
2021-04-28 14:48 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2021-04-28 01:01:05 PDT
<
rdar://70692277
>
Ryosuke Niwa
Comment 2
2021-04-28 01:11:20 PDT
Created
attachment 427246
[details]
Patch
Chris Dumez
Comment 3
2021-04-28 07:50:37 PDT
Comment on
attachment 427246
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=427246&action=review
> Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp:336 > + if (connection.ignoreInvalidMessageForTesting())
Do we want to do that before the RELEASE_LOG_FAULT since RELEASE_LOG_FAULT generates a simulated crash trace (on iOS at least)?
Ryosuke Niwa
Comment 4
2021-04-28 12:05:40 PDT
(In reply to Chris Dumez from
comment #3
)
> Comment on
attachment 427246
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=427246&action=review
> > > Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp:336 > > + if (connection.ignoreInvalidMessageForTesting()) > > Do we want to do that before the RELEASE_LOG_FAULT since RELEASE_LOG_FAULT > generates a simulated crash trace (on iOS at least)?
That's a good point.
Ryosuke Niwa
Comment 5
2021-04-28 12:06:12 PDT
Created
attachment 427287
[details]
Patch for landing
EWS
Comment 6
2021-04-28 12:07:19 PDT
Tools/Scripts/svn-apply failed to apply
attachment 427287
[details]
to trunk. Please resolve the conflicts and upload a new patch.
Ryosuke Niwa
Comment 7
2021-04-28 14:44:34 PDT
Created
attachment 427295
[details]
Patch for landing
EWS
Comment 8
2021-04-28 14:45:32 PDT
Invalid ChangeLog at /Volumes/Data/worker/Commit-Queue/build/Source/WebKit/ChangeLog
Ryosuke Niwa
Comment 9
2021-04-28 14:48:38 PDT
Created
attachment 427296
[details]
Patch for landing
Ryosuke Niwa
Comment 10
2021-04-28 14:54:48 PDT
Comment on
attachment 427296
[details]
Patch for landing Clearing flags on attachment: 427296 Committed
r276733
(
237134@main
): <
https://commits.webkit.org/237134@main
>
Ryosuke Niwa
Comment 11
2021-04-28 14:54:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug