Source/WebKit/UIProcess/WebPageProxy.cpp
@@ -562,7 +562,7 @@ WebPageProxy::WebPageProxy(PageClient& pageClient, WebProcessProxy& process, Ref
     m_inspectorController->init();
 
 #if ENABLE(IPC_TESTING_API)
-    if (m_preferences->store().getBoolValueForKey(WebPreferencesKey::ipcTestingAPIEnabledKey()))
+    if (m_preferences->ipcTestingAPIEnabled())
         process.setIgnoreInvalidMessageForTesting();
 #endif
 
